olhar-df/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olhar-df
  labels:
    app: olhar-df
spec:
  type: ClusterIP
  selector:
    app: olhar-df
  ports:
    - name: http
      port: 9000
      targetPort: 8000
