olhar-df/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olhar-df
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: olhardf.10.233.159.150.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olhar-df
                port:
                  number: 9000
